add bibliothekar task

--- a/Extractor/Gradle/sandbox/settings.gradle
+++ b/Extractor/Gradle/sandbox/settings.gradle
@@ -4,3 +4,5 @@ pluginManagement {
 
 rootProject.name = 'Extractor-sandbox'
 include(":jvm")
+include(":jvm-child")
+include(":jvm-nest:jvm-nested")
