--- a/Extractor/Gradle/sandbox/settings.gradle
+++ b/Extractor/Gradle/sandbox/settings.gradle
@@ -6,3 +6,4 @@ rootProject.name = 'Extractor-sandbox'
 include(":jvm")
 include(":jvm-child")
 include(":jvm-nest:jvm-nested")
+include(":android-library")
