--- a/Extractor/Gradle/sandbox/android-library/build.gradle
+++ b/Extractor/Gradle/sandbox/android-library/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android' version '1.7.20'
-    id 'net.meilcli.bibliothekar.extractor.plugin'
+    id 'net.meilcli.bibliothekar.extractor.plugin.jvm'
 }
 
 android {
