--- a/Extractor/Gradle/sandbox/jvm-child/build.gradle
+++ b/Extractor/Gradle/sandbox/jvm-child/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.7.20'
-    id 'net.meilcli.bibliothekar.extractor.plugin'
+    id 'net.meilcli.bibliothekar.extractor.plugin.jvm'
 }
 
 repositories {
