--- a/Extractor/Gradle/sandbox/android-library-child/build.gradle
+++ b/Extractor/Gradle/sandbox/android-library-child/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 android {
-    namespace 'net.meilcli.bibliothekar.sandbox.library'
+    namespace 'net.meilcli.bibliothekar.sandbox.library_child'
     compileSdk 32
 
     defaultConfig {
@@ -37,7 +37,6 @@ repositories {
 }
 
 dependencies {
-    implementation project(':android-library-child')
     implementation platform('org.jetbrains.kotlin:kotlin-bom')
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
     implementation 'androidx.appcompat:appcompat:1.5.1'
