--- a/Extractor/Gradle/sandbox/jvm-child/build.gradle
+++ b/Extractor/Gradle/sandbox/jvm-child/build.gradle
@@ -1,13 +1,5 @@
 plugins {
-    id 'org.jetbrains.kotlin.jvm' version '1.7.20'
+    id 'org.jetbrains.kotlin.jvm'
+    id 'net.meilcli.bibliothekar.toolchain.config.kotlin'
     id 'net.meilcli.bibliothekar.extractor.plugin.jvm'
-}
-
-repositories {
-    mavenCentral()
-}
-
-dependencies {
-    implementation platform('org.jetbrains.kotlin:kotlin-bom')
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
 }
