--- a/Extractor/Gradle/plugin/android/build.gradle
+++ b/Extractor/Gradle/plugin/android/build.gradle
@@ -1,18 +1,19 @@
 plugins {
     id 'java-gradle-plugin'
-    id 'org.jetbrains.kotlin.jvm' version '1.7.20'
+    id 'org.jetbrains.kotlin.jvm'
+    id 'net.meilcli.bibliothekar.toolchain.dependencies'
+    id 'net.meilcli.bibliothekar.toolchain.config.kotlin'
 }
 
+import net.meilcli.bibliothekar.config.Dependencies
+
 repositories {
-    mavenCentral()
     google()
 }
 
 dependencies {
     implementation project(':core')
-    implementation platform('org.jetbrains.kotlin:kotlin-bom')
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
-    implementation 'com.android.tools.build:gradle:7.3.1'
+    implementation Dependencies.ComAndroidToolsBuild.Gradle
 }
 
 testing {
