--- a/Extractor/Gradle/plugin/core/build.gradle
+++ b/Extractor/Gradle/plugin/core/build.gradle
@@ -1,15 +1,7 @@
 plugins {
     id 'java-gradle-plugin'
-    id 'org.jetbrains.kotlin.jvm' version '1.7.20'
-}
-
-repositories {
-    mavenCentral()
-}
-
-dependencies {
-    implementation platform('org.jetbrains.kotlin:kotlin-bom')
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
+    id 'org.jetbrains.kotlin.jvm'
+    id 'net.meilcli.bibliothekar.toolchain.config.kotlin'
 }
 
 testing {
