--- a/Extractor/Gradle/sandbox/android-library/build.gradle
+++ b/Extractor/Gradle/sandbox/android-library/build.gradle
@@ -1,47 +1,14 @@
 plugins {
     id 'com.android.library'
-    id 'org.jetbrains.kotlin.android' version '1.7.20'
+    id 'org.jetbrains.kotlin.android'
+    id 'net.meilcli.bibliothekar.toolchain.config.android-library'
     id 'net.meilcli.bibliothekar.extractor.plugin.android'
 }
 
 android {
     namespace 'net.meilcli.bibliothekar.sandbox.library'
-    compileSdk 32
-
-    defaultConfig {
-        minSdk 21
-        targetSdk 32
-
-        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
-        consumerProguardFiles "consumer-rules.pro"
-    }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-    kotlinOptions {
-        jvmTarget = '1.8'
-    }
-}
-
-repositories {
-    mavenCentral()
-    google()
 }
 
 dependencies {
     implementation project(':android-library-child')
-    implementation platform('org.jetbrains.kotlin:kotlin-bom')
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
-    implementation 'androidx.appcompat:appcompat:1.5.1'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
 }
