--- a/Extractor/Gradle/sandbox/build.gradle
+++ b/Extractor/Gradle/sandbox/build.gradle
@@ -1,9 +1,5 @@
-buildscript {
-    repositories {
-        google()
-        mavenCentral()
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:7.3.1'
-    }
+plugins {
+    id 'org.jetbrains.kotlin.jvm' version '1.7.20' apply false
+    id 'org.jetbrains.kotlin.android' version '1.7.20' apply false
+    id 'com.android.library' version '7.3.1' apply false
 }
