--- a/Extractor/Gradle/sandbox/jvm/build.gradle
+++ b/Extractor/Gradle/sandbox/jvm/build.gradle
@@ -1,15 +1,10 @@
 plugins {
-    id 'org.jetbrains.kotlin.jvm' version '1.7.20'
+    id 'org.jetbrains.kotlin.jvm'
+    id 'net.meilcli.bibliothekar.toolchain.config.kotlin'
     id 'net.meilcli.bibliothekar.extractor.plugin.jvm'
 }
 
-repositories {
-    mavenCentral()
-}
-
 dependencies {
-    implementation platform('org.jetbrains.kotlin:kotlin-bom')
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
     implementation project(':jvm-child')
     implementation project(':jvm-nest:jvm-nested')
 }
