--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,6 @@
 rootProject.name = 'Bibliothekar'
+includeBuild('/Toolchain/Gradle/generator')
+includeBuild('/Toolchain/Gradle/dependencies')
+includeBuild('/Toolchain/Gradle/config')
 includeBuild('/Extractor/Gradle/plugin')
 includeBuild('/Extractor/Gradle/sandbox')
