--- a/Extractor/Gradle/plugin/android/build.gradle
+++ b/Extractor/Gradle/plugin/android/build.gradle
@@ -1,8 +1,10 @@
 plugins {
     id 'java-gradle-plugin'
     id 'org.jetbrains.kotlin.jvm'
+    id 'io.gitlab.arturbosch.detekt'
     id 'net.meilcli.bibliothekar.toolchain.dependencies'
     id 'net.meilcli.bibliothekar.toolchain.config.kotlin'
+    id 'net.meilcli.bibliothekar.toolchain.config.detekt'
 }
 
 import net.meilcli.bibliothekar.config.Dependencies
