--- a/Extractor/Gradle/plugin/core/build.gradle
+++ b/Extractor/Gradle/plugin/core/build.gradle
@@ -1,7 +1,9 @@
 plugins {
     id 'java-gradle-plugin'
     id 'org.jetbrains.kotlin.jvm'
+    id 'io.gitlab.arturbosch.detekt'
     id 'net.meilcli.bibliothekar.toolchain.config.kotlin'
+    id 'net.meilcli.bibliothekar.toolchain.config.detekt'
 }
 
 testing {
