--- a/Extractor/Gradle/sandbox/build.gradle
+++ b/Extractor/Gradle/sandbox/build.gradle
@@ -1,5 +1,14 @@
 plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.7.20' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.20' apply false
+    id 'io.gitlab.arturbosch.detekt' version '1.22.0' apply false
     id 'com.android.library' version '7.3.1' apply false
+}
+
+tasks.register("detekt") {
+    dependsOn ':jvm:detekt'
+    dependsOn ':jvm-child:detekt'
+    dependsOn ':jvm-nest:jvm-nested:detekt'
+    dependsOn ':android-library:detekt'
+    dependsOn ':android-library-child:detekt'
 }
