--- a/Extractor/Gradle/sandbox/jvm/build.gradle
+++ b/Extractor/Gradle/sandbox/jvm/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'org.jetbrains.kotlin.jvm'
+    id 'io.gitlab.arturbosch.detekt'
     id 'net.meilcli.bibliothekar.toolchain.config.kotlin'
+    id 'net.meilcli.bibliothekar.toolchain.config.detekt'
     id 'net.meilcli.bibliothekar.extractor.plugin.jvm'
 }
 
