--- a/Toolchain/Gradle/config/android/build.gradle
+++ b/Toolchain/Gradle/config/android/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java-gradle-plugin'
     id 'org.jetbrains.kotlin.jvm'
+    id 'io.gitlab.arturbosch.detekt'
     id 'net.meilcli.bibliothekar.toolchain.dependencies'
 }
 
@@ -26,4 +27,10 @@ gradlePlugin {
             implementationClass = 'net.meilcli.bibliothekar.toolchain.config.android.AndroidLibraryPlugin'
         }
     }
+}
+
+detekt {
+    buildUponDefaultConfig = true
+    config = files("../../../../detekt.yml")
+    basePath = file("../../../../")
 }
