--- a/Toolchain/Gradle/config/build.gradle
+++ b/Toolchain/Gradle/config/build.gradle
@@ -1,3 +1,10 @@
 plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.7.20' apply false
+    id 'io.gitlab.arturbosch.detekt' version '1.22.0' apply false
+}
+
+tasks.register("detekt") {
+    dependsOn ':core:detekt'
+    dependsOn ':jvm:detekt'
+    dependsOn ':android:detekt'
 }
