--- a/Toolchain/Gradle/generator/build.gradle
+++ b/Toolchain/Gradle/generator/build.gradle
@@ -1,3 +1,8 @@
 plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.7.20' apply false
+    id 'io.gitlab.arturbosch.detekt' version '1.22.0' apply false
+}
+
+tasks.register("detekt") {
+    dependsOn ':dependencies:detekt'
 }
