--- a/Toolchain/Gradle/generator/dependencies/build.gradle
+++ b/Toolchain/Gradle/generator/dependencies/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java-gradle-plugin'
     id 'org.jetbrains.kotlin.jvm'
+    id 'io.gitlab.arturbosch.detekt'
 }
 
 repositories {
@@ -20,4 +21,10 @@ gradlePlugin {
             implementationClass = 'net.meilcli.bibliothekar.toolchain.generator.dependencies.DependenciesGeneratorPlugin'
         }
     }
+}
+
+detekt {
+    buildUponDefaultConfig = true
+    config = files("../../../../detekt.yml")
+    basePath = file("../../../../")
 }
