--- a/Extractor/Gradle/sandbox/build.gradle
+++ b/Extractor/Gradle/sandbox/build.gradle
@@ -12,3 +12,11 @@ tasks.register("detekt") {
     dependsOn ':android-library:detekt'
     dependsOn ':android-library-child:detekt'
 }
+
+tasks.register("check") {
+    dependsOn ':jvm:check'
+    dependsOn ':jvm-child:check'
+    dependsOn ':jvm-nest:jvm-nested:check'
+    dependsOn ':android-library:check'
+    dependsOn ':android-library-child:check'
+}
