--- a/Extractor/Gradle/sandbox/build.gradle
+++ b/Extractor/Gradle/sandbox/build.gradle
@@ -1,3 +1,7 @@
+import io.gitlab.arturbosch.detekt.Detekt
+import io.gitlab.arturbosch.detekt.DetektPlugin
+import io.gitlab.arturbosch.detekt.report.ReportMergeTask
+
 plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.7.20' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.20' apply false
@@ -5,12 +9,23 @@ plugins {
     id 'com.android.library' version '7.3.1' apply false
 }
 
-tasks.register("detekt") {
-    dependsOn ':jvm:detekt'
-    dependsOn ':jvm-child:detekt'
-    dependsOn ':jvm-nest:jvm-nested:detekt'
-    dependsOn ':android-library:detekt'
-    dependsOn ':android-library-child:detekt'
+def reportMerge = tasks.register("detekt", ReportMergeTask) {
+    output = project.layout.buildDirectory.file("reports/detekt/merge.xml")
+}
+
+subprojects {
+    afterEvaluate {
+        plugins.withType(DetektPlugin) {
+            tasks.withType(Detekt) { detektTask ->
+                finalizedBy(reportMerge)
+
+                reportMerge.configure { mergeTask ->
+                    mergeTask.input.from(detektTask.xmlReportFile)
+                    mergeTask.dependsOn(detektTask)
+                }
+            }
+        }
+    }
 }
 
 tasks.register("check") {
