--- a/Toolchain/Gradle/generator/build.gradle
+++ b/Toolchain/Gradle/generator/build.gradle
@@ -1,10 +1,29 @@
+import io.gitlab.arturbosch.detekt.Detekt
+import io.gitlab.arturbosch.detekt.DetektPlugin
+import io.gitlab.arturbosch.detekt.report.ReportMergeTask
+
 plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.7.20' apply false
     id 'io.gitlab.arturbosch.detekt' version '1.22.0' apply false
 }
 
-tasks.register("detekt") {
-    dependsOn ':dependencies:detekt'
+def reportMerge = tasks.register("detekt", ReportMergeTask) {
+    output = project.layout.buildDirectory.file("reports/detekt/merge.xml")
+}
+
+subprojects {
+    afterEvaluate {
+        plugins.withType(DetektPlugin) {
+            tasks.withType(Detekt) { detektTask ->
+                finalizedBy(reportMerge)
+
+                reportMerge.configure { mergeTask ->
+                    mergeTask.input.from(detektTask.xmlReportFile)
+                    mergeTask.dependsOn(detektTask)
+                }
+            }
+        }
+    }
 }
 
 tasks.register("check") {
