add detekt formatting rule

--- a/Toolchain/Gradle/config/android/build.gradle
+++ b/Toolchain/Gradle/config/android/build.gradle
@@ -18,6 +18,8 @@ dependencies {
     implementation Dependencies.OrgJetbrainsKotlin.KotlinGradlePlugin
     implementation Dependencies.OrgJetbrainsKotlin.KotlinStdlibJdk8
     implementation Dependencies.ComAndroidToolsBuild.Gradle
+
+    detektPlugins Dependencies.IoGitlabArturboschDetekt.DetektFormatting
 }
 
 gradlePlugin {
