--- a/Toolchain/Gradle/config/core/build.gradle
+++ b/Toolchain/Gradle/config/core/build.gradle
@@ -15,6 +15,8 @@ dependencies {
     implementation platform(Dependencies.OrgJetbrainsKotlin.KotlinBom)
     implementation Dependencies.OrgJetbrainsKotlin.KotlinStdlibJdk8
     implementation Dependencies.IoGitlabArturboschDetekt.DetektGradlePlugin
+
+    detektPlugins Dependencies.IoGitlabArturboschDetekt.DetektFormatting
 }
 
 bibliothekarDependencies {
