--- a/Toolchain/Gradle/config/jvm/build.gradle
+++ b/Toolchain/Gradle/config/jvm/build.gradle
@@ -15,6 +15,8 @@ dependencies {
     implementation project(':core')
     implementation platform(Dependencies.OrgJetbrainsKotlin.KotlinBom)
     implementation Dependencies.OrgJetbrainsKotlin.KotlinStdlibJdk8
+
+    detektPlugins Dependencies.IoGitlabArturboschDetekt.DetektFormatting
 }
 
 gradlePlugin {
