--- a/Toolchain/Gradle/dependencies/build.gradle
+++ b/Toolchain/Gradle/dependencies/build.gradle
@@ -14,11 +14,14 @@ dependencies {
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
     implementation 'org.jetbrains.kotlin:kotlin-gradle-plugin'
 
+    detektPlugins "io.gitlab.arturbosch.detekt:detekt-formatting:1.22.0"
+
     library 'org.jetbrains.kotlin:kotlin-bom'
     library 'org.jetbrains.kotlin:kotlin-gradle-plugin'
     library 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
 
     library 'io.gitlab.arturbosch.detekt:detekt-gradle-plugin:1.22.0'
+    library 'io.gitlab.arturbosch.detekt:detekt-formatting:1.22.0'
 
     library 'com.android.tools.build:gradle:7.3.1'
     library 'androidx.appcompat:appcompat:1.5.1'
