--- a/Extractor/Gradle/sandbox/gradle.properties
+++ b/Extractor/Gradle/sandbox/gradle.properties
@@ -1,5 +1,6 @@
 org.gradle.caching=true
 org.gradle.parallel=true
+org.gradle.jvmargs=-Xmx4096M -XX:MaxMetaspaceSize=1024M
 
 android.useAndroidX=true
 android.enableJetifier=true
