install kotlinx.serialization

--- a/Extractor/Gradle/plugin/core/build.gradle
+++ b/Extractor/Gradle/plugin/core/build.gradle
@@ -1,9 +1,16 @@
 plugins {
     id 'java-gradle-plugin'
     id 'org.jetbrains.kotlin.jvm'
+    id 'org.jetbrains.kotlin.plugin.serialization'
     id 'io.gitlab.arturbosch.detekt'
     id 'net.meilcli.bibliothekar.toolchain.config.kotlin'
     id 'net.meilcli.bibliothekar.toolchain.config.detekt'
+}
+
+import net.meilcli.bibliothekar.config.Dependencies
+
+dependencies {
+    implementation Dependencies.OrgJetbrainsKotlinx.KotlinxSerializationJson
 }
 
 testing {
