--- a/detekt.yml
+++ b/detekt.yml
@@ -9,6 +9,9 @@ style:
         active: false
     WildcardImport:
         active: false
+    ReturnCount:
+        active: true
+        max: 5
 
 formatting:
     MaximumLineLength:
