--- a/Toolchain/Gradle/dependencies/build.gradle
+++ b/Toolchain/Gradle/dependencies/build.gradle
@@ -32,6 +32,8 @@ dependencies {
 
     library 'junit:junit:4.13.2'
 
+    library 'io.mockk:mockk:1.13.3'
+
     library 'androidx.test.ext:junit:1.1.4'
     library 'androidx.test.espresso:espresso-core:3.5.0'
 }
