write output of BibliothekarExtractTask

--- a/detekt.yml
+++ b/detekt.yml
@@ -12,6 +12,9 @@ style:
     ReturnCount:
         active: true
         max: 5
+    ThrowsCount:
+        active: true
+        max: 5
     LoopWithTooManyJumpStatements:
         active: true
         maxJumpCount: 5
