--- a/Toolchain/Gradle/generator/dependencies/build.gradle
+++ b/Toolchain/Gradle/generator/dependencies/build.gradle
@@ -18,7 +18,7 @@ dependencies {
 
 gradlePlugin {
     plugins {
-        greeting {
+        dependencies {
             id = 'net.meilcli.bibliothekar.toolchain.generator.dependencies'
             implementationClass = 'net.meilcli.bibliothekar.toolchain.generator.dependencies.DependenciesGeneratorPlugin'
         }
