--- a/Extractor/Gradle/sandbox/settings.gradle
+++ b/Extractor/Gradle/sandbox/settings.gradle
@@ -28,6 +28,6 @@ include(":jvm")
 include(":jvm-child")
 include(":jvm-nest:jvm-nested")
 include(":android-application")
-include(":android-dynamic")
+include(":dynamic") // android gradle plugin cannot allow hyphen
 include(":android-library")
 include(":android-library-child")
