--- a/settings.gradle
+++ b/settings.gradle
@@ -2,12 +2,12 @@ import java.nio.file.Files
 import java.nio.file.StandardCopyOption
 
 rootProject.name = 'Bibliothekar'
-includeBuild('/Toolchain/Gradle/generator')
-includeBuild('/Toolchain/Gradle/dependencies')
-includeBuild('/Toolchain/Gradle/detekt-rule')
-includeBuild('/Toolchain/Gradle/config')
-includeBuild('/Extractor/Gradle/plugin')
-includeBuild('/Extractor/Gradle/sandbox')
+includeBuild('Toolchain/Gradle/generator')
+includeBuild('Toolchain/Gradle/dependencies')
+includeBuild('Toolchain/Gradle/detekt-rule')
+includeBuild('Toolchain/Gradle/config')
+includeBuild('Extractor/Gradle/plugin')
+includeBuild('Extractor/Gradle/sandbox')
 
 // copy local.properties because android gradle plugin cannot find sdk location when composite build
 def localPropertiesFile = file("local.properties")
