--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,24 +3,65 @@ name: CI
 on:
   push:
     branches:
-      - "*"
+      - '*'
     tags-ignore:
-      - "*"
+      - '*'
   pull_request:
 
 jobs:
-  build:
+  build-gradle:
     runs-on: ubuntu-latest
     env:
-      GITHUB_USER: "github-bot"
+      GITHUB_USER: 'github-bot'
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
         with:
-          distribution: "zulu"
+          distribution: 'zulu'
           java-version: 11
-          cache: "gradle"
+          cache: 'gradle'
       - name: Grant permission
         run: chmod +x gradlew
       - run: ./gradlew assemble
+  build-npm:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
+      - uses: actions/cache@v2
+        with:
+          path: node_modules
+          key: ${{ runner.OS }}-build-${{ hashFiles('package.json') }}-${{ hashFiles('package-lock.json') }}
+          restore-keys: |
+            ${{ runner.OS }}-build-${{ hashFiles('package.json') }}-
+            ${{ runner.OS }}-build-
+      - run: npm install
+      - run: npm run build
+      - run: npm run test
+      - run: npm run lint:report
+        continue-on-error: true
+      - uses: actions/upload-artifact@v3
+        with:
+          name: result
+          path: |
+            eslint_report.json
+  build:
+    runs-on: ubuntu-latest
+    needs: [build-gradle, build-npm]
+  approve:
+    runs-on: ubuntu-latest
+    needs: build
+    if: github.event_name == 'pull_request' && github.actor == 'dependabot[bot]'
+    steps:
+      - id: metadata
+        uses: dependabot/fetch-metadata@v1.1.1
+        with:
+          github-token: '${{ secrets.GITHUB_TOKEN }}'
+      - if: steps.metadata.outputs.update-type == 'version-update:semver-patch' || steps.metadata.outputs.update-type == 'version-update:semver-minor'
+        run: gh pr review --approve "$PR_URL"
+        env:
+          PR_URL: ${{ github.event.pull_request.html_url }}
+          GITHUB_TOKEN: ${{ secrets.MEILCLI_BOT }}
