--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,6 +51,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     needs: [build-gradle, build-npm]
+    steps:
+      - run: echo 'build success'
   approve:
     runs-on: ubuntu-latest
     needs: build
