--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,9 +1,24 @@
 version: 2
 updates:
-  - package-ecosystem: "gradle"
-    directory: "/"
+  - package-ecosystem: 'gradle'
+    directory: '/'
     schedule:
-      interval: "daily"
+      interval: 'daily'
     reviewers:
-      - "MeilCli"
+      - 'MeilCli'
+    assignees:
+      - 'MeilCli'
+    labels:
+      - 'Dependencies'
+    open-pull-requests-limit: 20
+  - package-ecosystem: 'npm'
+    directory: '/'
+    schedule:
+      interval: 'daily'
+    reviewers:
+      - 'MeilCli'
+    assignees:
+      - 'MeilCli'
+    labels:
+      - 'Dependencies'
     open-pull-requests-limit: 20
