--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
         run: chmod +x gradlew
       - run: ./gradlew assemble
       - run: ./gradlew check
-  build-npm:
+  build-node-js:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -51,7 +51,7 @@ jobs:
             eslint_report.json
   build:
     runs-on: ubuntu-latest
-    needs: [build-gradle, build-npm]
+    needs: [build-gradle, build-node-js]
     steps:
       - run: echo 'build success'
   approve:
