--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,5 @@
     },
     "exclude": ["node_modules", "**/*.test.ts"],
     "files": [],
-    "references": [{ "path": "Transformer/Npm/core" }, { "path": "Transformer/Npm/cli" }]
+    "references": [{ "path": "Transformer/NodeJs/core" }, { "path": "Transformer/NodeJs/cli" }]
 }
