--- a/Transformer/NodeJs/core/package.json
+++ b/Transformer/NodeJs/core/package.json
@@ -13,7 +13,8 @@
         "lib"
     ],
     "scripts": {
-        "test": "jest"
+        "test": "jest",
+        "generate:guard": "ts-auto-guard --export-all ./src/*/*.ts"
     },
     "author": "MeilCli",
     "license": "MIT",
