--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "lint": "eslint **/src/**/*.ts",
         "lint:report": "eslint --output-file eslint_report.json --format json --ext .ts **/src/**/*.ts",
         "reference": "workspaces-to-typescript-project-references",
-        "transformer:cli": "npm run build && npm link -w Transformer/NodeJs/cli && npm run cli -w Transformer/NodeJs/cli"
+        "transformer:cli": "npm run build && npm link -w Transformer/NodeJs/cli && npm run cli -w Transformer/NodeJs/cli",
+        "transformer:core:generate:guard": "npm run generate:guard -w Transformer/NodeJs/core && eslint --fix **/src/**/*.guard.ts"
     },
     "author": "MeilCli",
     "license": "MIT",
@@ -29,6 +30,7 @@
         "jest": "^29.3.1",
         "jest-circus": "^29.3.1",
         "prettier": "^2.8.1",
+        "ts-auto-guard": "^4.1.2",
         "ts-jest": "^29.0.3",
         "ts-node": "^10.9.1",
         "typescript": "^4.9.4"
