--- a/Extractor/Gradle/plugin/jvm/build.gradle
+++ b/Extractor/Gradle/plugin/jvm/build.gradle
@@ -26,7 +26,7 @@ testing {
 
             targets {
                 all {
-                    testTask.configure { shouldRunAfter(test) } 
+                    testTask.configure { shouldRunAfter(test) }
                 }
             }
         }
@@ -43,6 +43,11 @@ gradlePlugin {
 }
 
 gradlePlugin.testSourceSets(sourceSets.functionalTest)
+
+tasks.withType(Test).configureEach {
+    maxParallelForks = Runtime.runtime.availableProcessors().intdiv(2) ?: 1
+    forkEvery = 10
+}
 
 tasks.named('check') {
     dependsOn(testing.suites.functionalTest)
