--- a/Extractor/Gradle/plugin/bundled/build.gradle
+++ b/Extractor/Gradle/plugin/bundled/build.gradle
@@ -55,6 +55,11 @@ gradlePlugin {
 
 gradlePlugin.testSourceSets(sourceSets.functionalTest)
 
+tasks.withType(Test).configureEach {
+    maxParallelForks = Runtime.runtime.availableProcessors().intdiv(2) ?: 1
+    forkEvery = 10
+}
+
 tasks.named('check') {
     dependsOn(testing.suites.functionalTest)
 }
