--- a/.github/workflows/report.yml
+++ b/.github/workflows/report.yml
@@ -15,14 +15,28 @@ jobs:
         with:
           workflow: ci.yml
           run_id: ${{ github.event.workflow_run.id }}
-          name: result
-      - name: Transform report file
+          name: eslint_result
+      - name: Download artifact
+        uses: dawidd6/action-download-artifact@v2
+        with:
+          workflow: ci.yml
+          run_id: ${{ github.event.workflow_run.id }}
+          name: detekt_result
+      - name: Transform report file from eslint
         uses: MeilCli/common-lint-reporter/transformer/eslint@v0
         with:
           report_files: |
             eslint_report.json
+          output_path: 'eslint_report.json'
+      - name: Transform report file from detekt
+        uses: MeilCli/common-lint-reporter/transformer/checkstyle@v0
+        with:
+          report_files: |
+            build/reports/detekt/merge.xml
+          output_path: 'detekt_report.json'
       - name: Report lint result
         uses: MeilCli/common-lint-reporter@v0
         with:
           report_type: 'check_run'
           report_name: 'Lint Report'
+          report_files: '*_report.json'
