--- a/.github/workflows/report.yml
+++ b/.github/workflows/report.yml
@@ -28,12 +28,16 @@ jobs:
           report_files: |
             eslint_report.json
           output_path: 'eslint_report.json'
+      - run: ls
+      - run: ls build/reports/detekt
+      - run: cat build/reports/detekt/merge.xml
       - name: Transform report file from detekt
         uses: MeilCli/common-lint-reporter/transformer/checkstyle@v0
         with:
           report_files: |
             build/reports/detekt/merge.xml
           output_path: 'detekt_report.json'
+      - run: cat detekt_report.json
       - name: Report lint result
         uses: MeilCli/common-lint-reporter@v0
         with:
