--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,20 +11,42 @@ on:
 jobs:
   build-gradle:
     runs-on: ubuntu-latest
-    env:
-      GITHUB_USER: 'github-bot'
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
         with:
           distribution: 'zulu'
           java-version: 11
-          cache: 'gradle'
+      - uses: actions/cache@v3
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: build-gradle-${{ runner.os }}-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            build-gradle-${{ runner.os }}-
       - name: Grant permission
         run: chmod +x gradlew
       - run: ./gradlew assemble
       - run: ./gradlew check
+  lint-gradle:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-java@v3
+        with:
+          distribution: 'zulu'
+          java-version: 11
+      - uses: actions/cache@v3
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: build-gradle-${{ runner.os }}-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            build-gradle-${{ runner.os }}-
+      - name: Grant permission
+        run: chmod +x gradlew
       - run: ./gradlew detekt
       - run: mv build/reports/detekt/merge.xml detekt_report.xml
       - uses: actions/upload-artifact@v3
@@ -42,15 +64,27 @@ jobs:
       - uses: actions/cache@v3
         with:
           path: node_modules
-          key: ${{ runner.OS }}-build-${{ hashFiles('package.json') }}-${{ hashFiles('package-lock.json') }}
+          key: build-node-js-${{ runner.OS }}-${{ hashFiles('**/package.json', '**/package-lock.json') }}
           restore-keys: |
-            ${{ runner.OS }}-build-${{ hashFiles('package.json') }}-
-            ${{ runner.OS }}-build-
+            build-node-js-${{ runner.OS }}-
       - run: npm install
       - run: npm run build
       - run: npm run test
+  lint-node-js:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
+      - uses: actions/cache@v3
+        with:
+          path: node_modules
+          key: lint-node-js-${{ runner.OS }}-${{ hashFiles('**/package.json', '**/package-lock.json') }}
+          restore-keys: |
+            lint-node-js-${{ runner.OS }}-
+      - run: npm install
       - run: npm run lint:report
-        continue-on-error: true
       - uses: actions/upload-artifact@v3
         with:
           name: eslint_result
@@ -58,7 +92,7 @@ jobs:
             eslint_report.json
   build:
     runs-on: ubuntu-latest
-    needs: [build-gradle, build-node-js]
+    needs: [build-gradle, lint-gradle, build-node-js, lint-node-js]
     steps:
       - run: echo 'build success'
   approve:
