improve test speed

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Grant permission
         run: chmod +x gradlew
       - run: ./gradlew assemble
-      - run: ./gradlew check
+      - run: ./gradlew testAll
   lint-gradle:
     runs-on: ubuntu-latest
     steps:
