--- a/Extractor/Gradle/plugin/core/build.gradle
+++ b/Extractor/Gradle/plugin/core/build.gradle
@@ -25,3 +25,8 @@ tasks.withType(Test).configureEach {
     maxParallelForks = Runtime.runtime.availableProcessors().intdiv(2) ?: 1
     forkEvery = 10
 }
+
+tasks.register("functionalTest") {
+    // dummy
+}
+
