--- a/Toolchain/Gradle/dependencies/build.gradle
+++ b/Toolchain/Gradle/dependencies/build.gradle
@@ -59,3 +59,7 @@ tasks.named("detekt").configure {
         xml.outputLocation.set(file("build/reports/detekt/merge.xml"))
     }
 }
+
+tasks.register("testAll") {
+    dependsOn ':test'
+}
