--- a/Toolchain/Gradle/detekt-rule/build.gradle
+++ b/Toolchain/Gradle/detekt-rule/build.gradle
@@ -36,3 +36,7 @@ tasks.named("detekt").configure {
         xml.outputLocation.set(file("build/reports/detekt/merge.xml"))
     }
 }
+
+tasks.register("testAll") {
+    dependsOn ':test'
+}
