--- a/Transformer/NodeJs/core/package.json
+++ b/Transformer/NodeJs/core/package.json
@@ -1,7 +1,7 @@
 {
     "name": "bibliothekar-transformer-core",
     "version": "0.0.1",
-    "description": "Licenses of dependencies tool",
+    "description": "A tool of notice and verify licenses of dependencies",
     "keywords": [
         "license",
         "dependencies"
