--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -103,9 +103,17 @@ jobs:
       - id: metadata
         uses: dependabot/fetch-metadata@v1.1.1
         with:
-          github-token: '${{ secrets.GITHUB_TOKEN }}'
-      - if: steps.metadata.outputs.update-type == 'version-update:semver-patch' || steps.metadata.outputs.update-type == 'version-update:semver-minor'
-        run: gh pr review --approve "$PR_URL"
-        env:
-          PR_URL: ${{ github.event.pull_request.html_url }}
-          GITHUB_TOKEN: ${{ secrets.MEILCLI_BOT }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+      - use: actions/github-script
+        if: steps.metadata.outputs.update-type == 'version-update:semver-patch' || steps.metadata.outputs.update-type == 'version-update:semver-minor'
+        with:
+          github-token: ${{ secrets.MEILCLI_BOT }}
+          script: |
+            github.rest.pulls.createReview(
+              {
+                pull_number: context.pull_request.number
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                event: 'approve'
+              }
+            )
