--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -111,7 +111,7 @@ jobs:
           script: |
             github.rest.pulls.createReview(
               {
-                pull_number: context.pull_request.number,
+                pull_number: context.issue.number,
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 event: 'approve'
