--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -114,6 +114,6 @@ jobs:
                 pull_number: context.payload.pull_request.number,
                 owner: context.repo.owner,
                 repo: context.repo.repo,
-                event: 'approve'
+                event: 'APPROVE'
               }
             )
