--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -15,7 +15,7 @@ on:
 
 jobs:
   automerge:
-    if: github.event.review.state == 'approved' || !github.event.review
+    if: (github.event.review.state == 'approved' || !github.event.review) && secrets.MEILCLI_BOT != ''
     runs-on: ubuntu-latest
     steps:
       - uses: reitermarkus/automerge@v1
